--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,39 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Release Bot
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - dev
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  release:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout Era.js
+        uses: actions/checkout@v2
+        with:
+          repository: miswanting/Era.js
+          path: Era.js
+
+      - name: Checkout Era.js-SDK
+        uses: actions/checkout@v2
+        with:
+          path: Era.js-SDK
+
+      - name: Setup Node.js Enviroment
+
+      - name: Setup Python 3 Enviroment
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
