--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  release:
+  Release Windows x64:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
@@ -32,17 +32,43 @@ jobs:
           path: Era.js-SDK
 
       - name: Setup Node.js Enviroment
-        run: dir
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: "14"
+          check-latest: true
 
       - name: Setup Python 3 Enviroment
-        run: dir
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+          architecture: "x64"
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: tree
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  Release Windows x32:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout Era.js
+        uses: actions/checkout@v2
+        with:
+          repository: miswanting/Era.js
+          path: Era.js
+
+      - name: Checkout Era.js-SDK
+        uses: actions/checkout@v2
+        with:
+          path: Era.js-SDK
+      - name: Setup Node.js Enviroment
+        run: dir
+
+      - name: Setup Python 3 Enviroment
+        run: dir
+  Release Linux x64:
+  Release Linux x32:
