--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           check-latest: true
 
       - name: Setup Python 3 Enviroment
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: "3.9"
           architecture: "x64"
