--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - dev
 
 jobs:
-  Release Windows x64:
+  Windows-x64:
     runs-on: windows-latest
 
     steps:
@@ -44,7 +44,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-  Release Windows x32:
+  Windows-x86:
     runs-on: windows-latest
 
     steps:
