--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,15 +34,14 @@ jobs:
           python-version: "3.8"
           architecture: "x64"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: tree
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Setup Front-End Enviroment
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd Era.js\Next\FrontEnd
+          npm run setup
+
+      - name: Setup Back-End Enviroment
+        run: |
+          dir
 
   Windows-x86:
     runs-on: windows-latest
