--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,8 @@ jobs:
         run: |
           mkdir Era.js-SDK\erajs
           xcopy Era.js\Next\BackEnd\erajs Era.js-SDK\erajs\ /E
-          del /Q Era.js-SDK\prebuilt\*
+          rmdir /S /Q Era.js-SDK\prebuilt
+          mkdir Era.js-SDK\prebuilt
           xcopy Era.js\Next\FrontEnd\dist\win-unpacked\ Era.js-SDK\prebuilt\ /E
           powershell Compress-Archive -Path Era.js-SDK\* -DestinationPath Era.js-SDK-${{ github.ref }}.zip -CompressionLevel Optimal
 
