--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,14 +40,12 @@ jobs:
           npx electron-builder --dir
 
       - name: Assemble SDK
-        env:
-          DATE: ${{ Get-Date -Format "yyddMM" }}
         run: |
           mkdir Era.js-SDK\erajs
           xcopy Era.js\Next\BackEnd\erajs Era.js-SDK\erajs\ /E
           Remove-Item Era.js-SDK\prebuilt\*.* -Recurse
           xcopy Era.js\Next\FrontEnd\dist\win-unpacked Era.js-SDK\prebuilt\ /E
-          $env:date = Get-Date -Format "yyddMM"
+          $date = Get-Date -Format "yyddMM"
           Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK v${{ env.date }}.zip" -CompressionLevel Optimal
           Write-Output "Era.js-SDK v${{ env.date }}.zip"
           Write-Output "Era.js-SDK v${{ env.DATE }}.zip"
