--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
           Remove-Item Era.js-SDK\prebuilt\*.* -Recurse
           xcopy Era.js\Next\FrontEnd\dist\win-unpacked Era.js-SDK\prebuilt\ /E
           $date = Get-Date -Format "yyddMM"
+          echo ::set-env name=date::$date
           Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK v${{ env.date }}.zip" -CompressionLevel Optimal
           Write-Output "Era.js-SDK v${{ env.date }}.zip"
           Write-Output "Era.js-SDK v${{ env.DATE }}.zip"
