--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Era.js-SDK v${{ env.date }}
+          release_name: Era.js-SDK v$DATE
           body: |
             Changes in this Release
             - First Change
@@ -72,8 +72,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Era.js-SDK v${{ env.date }}.zip
-          asset_name: Era.js-SDK v${{ env.date }}.zip
+          asset_path: Era.js-SDK v$DATE.zip
+          asset_name: Era.js-SDK v$DATE.zip
           asset_content_type: application/zip
 
   Windows-x86:
