--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: v$DATE
           release_name: Era.js-SDK v$DATE
           body: |
             Changes in this Release
@@ -72,8 +72,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Era.js-SDK v$DATE.zip
-          asset_name: Era.js-SDK v$DATE.zip
+          asset_path: "Era.js-SDK v$DATE.zip"
+          asset_name: "Era.js-SDK v$DATE.zip"
           asset_content_type: application/zip
 
   Windows-x86:
