--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,6 @@ jobs:
           $date = Get-Date -Format "yyddMM"
           echo "::set-env name=DATE::$date"
           Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK amd64.zip" -CompressionLevel Optimal
-          Write-Output "$DATE"
 
       - name: Create Release
         id: create_release
@@ -56,7 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v$DATE
+          tag_name: v${{ env.date }}
           release_name: Era.js-SDK v${{ env.date }}
           body_path: Era.js-SDK\CHANGELOG.md
           draft: true
