--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - dev
+    tags:
+      - v*
 
 jobs:
   Windows-x64:
@@ -45,9 +47,10 @@ jobs:
           xcopy Era.js\Next\BackEnd\erajs Era.js-SDK\erajs\ /E
           Remove-Item Era.js-SDK\prebuilt\*.* -Recurse
           xcopy Era.js\Next\FrontEnd\dist\win-unpacked Era.js-SDK\prebuilt\ /E
+          echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
           $date = Get-Date -Format "yyddMM"
-          echo "::set-env name=DATE::$date"
-          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK amd64.zip" -CompressionLevel Optimal
+          echo "::set-env name=RELEASE_DATE::$date"
+          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK v${{ env.date }}.zip" -CompressionLevel Optimal
 
       - name: Create Release
         id: create_release
@@ -67,8 +70,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "Era.js-SDK amd64.zip"
-          asset_name: "Era.js-SDK amd64.zip"
+          asset_path: "Era.js-SDK v${{ env.date }}.zip"
+          asset_name: "Era.js-SDK v${{ env.date }}.zip"
           asset_content_type: application/zip
 
   Windows-x86:
