--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,10 +47,10 @@ jobs:
           xcopy Era.js\Next\BackEnd\erajs Era.js-SDK\erajs\ /E
           Remove-Item Era.js-SDK\prebuilt\*.* -Recurse
           xcopy Era.js\Next\FrontEnd\dist\win-unpacked Era.js-SDK\prebuilt\ /E
-          echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
           $date = Get-Date -Format "yyddMM"
           echo "::set-env name=RELEASE_DATE::$date"
-          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK v${{ env.date }}.zip" -CompressionLevel Optimal
+          echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK v${{ env.RELEASE_DATE }}.zip" -CompressionLevel Optimal
 
       - name: Create Release
         id: create_release
@@ -58,8 +58,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ env.date }}
-          release_name: Era.js-SDK v${{ env.date }}
+          tag_name: v${{ env.RELEASE_DATE }}
+          release_name: Era.js-SDK v${{ env.RELEASE_DATE }}
           body_path: Era.js-SDK\CHANGELOG.md
           draft: true
           prerelease: false
@@ -70,8 +70,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "Era.js-SDK v${{ env.date }}.zip"
-          asset_name: "Era.js-SDK v${{ env.date }}.zip"
+          asset_path: "Era.js-SDK v${{ env.RELEASE_DATE }}.zip"
+          asset_name: "Era.js-SDK v${{ env.RELEASE_DATE }}.zip"
           asset_content_type: application/zip
 
   Windows-x86:
