--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
           echo "::set-env name=RELEASE_DATE::$date"
           echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
           Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK-${{ env.RELEASE_VERSION }}+${{ env.RELEASE_DATE }}.zip" -CompressionLevel Optimal
+          dir
 
       - name: Create Release
         id: create_release
