--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           $date = Get-Date -Format "yyddMM"
           echo "::set-env name=RELEASE_DATE::$date"
           echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
-          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK-${{ env.RELEASE_VERSION }}+${{ env.RELEASE_DATE }}.zip" -CompressionLevel Optimal
+          Compress-Archive -Path Era.js-SDK\* -DestinationPath "Era.js-SDK-${{ env.RELEASE_VERSION }}+$date.zip" -CompressionLevel Optimal
           dir
 
       - name: Create Release
