--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,8 +59,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}+${{ env.RELEASE_DATE }}
-          release_name: Era.js-SDK ${{ env.RELEASE_VERSION }}+${{ env.RELEASE_DATE }}
+          tag_name: v${{ env.RELEASE_DATE }}
+          release_name: Era.js-SDK v${{ env.RELEASE_DATE }}
           body_path: Era.js-SDK\CHANGELOG.md
           draft: true
           prerelease: false
